--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/MarishaHoza/lab-06-back-end/issues"
   },
-  "homepage": "https://github.com/MarishaHoza/lab-06-back-end#readme"
+  "homepage": "https://github.com/MarishaHoza/lab-06-back-end#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
+  }
 }
